# fastapi-ml-template

./: .gitignore  README.md  config.py  main.py  pyproject.toml
.github/workflows/: run-test.yml
app/: config.py  main.py
app/text_classifiers/: zero_shot_classifier.py
tests/: conftest.py  test_async_write.py  test_db_connection.py
